--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Ctrl+t exec kitty
 
 # kill focused window
 bindsym $mod+q kill
