--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -204,7 +204,7 @@ client.focused          #ffaaff #000000 #ffffff #ffaaff   #ffaaff
 default_border pixel 3
 
 bindsym $mod+F2 exec rofi -show drun -theme /usr/share/rofi/themes/iggy.rasi
-bindsym Print exec scrot -e 'mv $f ~/scrot'
+bindsym Print exec scrot -e 'mv $f ~/图片/scrot'
 
 exec --no-startup-id feh --bg-scale /home/yuxing/.background.jpg
 exec --no-startup-id fcitx5
@@ -216,4 +216,3 @@ for_window [class="QQ"] floating enable
 for_window [class="wechat"] floating enable
 for_window [class="com.alibabainc.dingtalk"] floating enable
 for_window [class="SimpleScreenRecorder"] floating enable
-
