modify config of bash, kitty and hypr

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -189,6 +189,9 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    repeat_delay = 200      # 设置按键重复延迟（毫秒）
+    repeat_rate = 30        # 设置按键重复速度（每秒字符数）
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
