modify some config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -297,6 +297,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 windowrulev2 = float,class:^(QQ)$,title:.*
 windowrulev2 = float,class:^(wechat)$,title:.*
 windowrulev2 = float,class:^(com.alibabainc.dingtalk)$,title:.*
+windowrulev2 = float,class:^(baidunetdisk)$,title:.*
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
