--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -232,6 +232,11 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+bind = $mainMod_SHIFT, h, movewindow, l
+bind = $mainMod_SHIFT, l, movewindow, r
+bind = $mainMod_SHIFT, k, movewindow, u
+bind = $mainMod_SHIFT, j, movewindow, d
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
