--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,12 @@
-# 启用鼠标支持
 set -g mouse on
 
-# 配置鼠标滚轮进入复制模式并滚动缓存
 bind -n WheelUpPane if-shell -F "#{alternate_on}" "send-keys Up" "copy-mode -e; send-keys -M"
 bind -n WheelDownPane if-shell -F "#{alternate_on}" "send-keys Down" "send-keys -M"
+
+bind C-u copy-mode
+
+setw -g mode-keys vi
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -selection clipboard"
 
