--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+set -g status-bg pink
+
 set -g mouse on
 
 bind -n WheelUpPane if-shell -F "#{alternate_on}" "send-keys Up" "copy-mode -e; send-keys -M"
