--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -209,6 +209,7 @@ bindsym Print exec scrot -e 'mv $f ~/图片/scrot'
 exec --no-startup-id feh --bg-scale /home/yuxing/.wallpaper
 exec --no-startup-id fcitx5
 exec --no-startup-id picom
+exec --no-startup-id nm-applet
 
 for_window [class="listen1"] floating enable
 for_window [class="scrcpy"] floating enable
