--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -210,6 +210,7 @@ exec --no-startup-id feh --bg-scale /home/yuxing/.wallpaper
 exec --no-startup-id fcitx5
 exec --no-startup-id picom
 exec --no-startup-id nm-applet
+exec --no-startup-id dunst
 
 for_window [class="listen1"] floating enable
 for_window [class="scrcpy"] floating enable
